--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,10 @@ nav {
 .intro {
     width: 80%;
     margin-top: 40px;
+    margin-bottom: 40px;
     color: var(--white);
     font-size: 1.6rem;
-    text-align: justify;
+    text-align: center;
     line-height: 2.5rem;
 }
   
@@ -137,7 +138,8 @@ main {
     background-color: var(--black);
 }
 .main-proyects-container {
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
     min-width: 320px;
     padding-bottom: 70px;
     text-align: center;
@@ -219,11 +221,12 @@ main {
 .form-container {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 90%;
 }
   
 .form-label, .message-input {
     color: var(--soft_green);
+    font-size: 2rem;
 }
   
 .message-input input {
@@ -233,6 +236,7 @@ main {
   
 input {
     width: 100%;
+    height: 31px;
 }
   
 input:focus {
@@ -250,8 +254,8 @@ input:focus {
     justify-content: center;
     margin-bottom: 48px;
     width: 150px;
-    margin-left: auto;
-    font-size: 16px;
+    margin-left: 70px;
+    font-size: 1.6rem;
     cursor: pointer;
 }
   
