--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ header {
     border-radius: 50%;
     border: 1px solid var(--gris-oscuro);
     box-shadow: 8px 16px 32px 0px var(--shadow);
-    height: 250px;
+    height: 200px;
     margin-top: 80px;
     width: 250px;
 }
@@ -92,6 +92,9 @@ nav {
     width: 100%;
     padding-bottom: 70px;
 }
+.info h2 {
+    font-weight: bold;
+}
 
 .intro {
     width: 80%;
@@ -99,7 +102,7 @@ nav {
     margin-bottom: 40px;
     color: var(--white);
     font-size: 1.6rem;
-    text-align: center;
+    text-align: justify;
     line-height: 2.5rem;
 }
   
@@ -143,6 +146,9 @@ main {
     min-width: 320px;
     padding-bottom: 70px;
     text-align: center;
+}
+.main-proyects-container h2 {
+    font-weight: bold;
 }
 .proyects--title {
     width: 90%;
@@ -216,6 +222,9 @@ main {
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+.contact-section h2 {
+    font-weight: bold;
 }
   
 .form-container {
