Se quito el correo electronico y se agrego 2 skills mas

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2827,6 +2827,7 @@ input, select, textarea {
 
 			ul.icons li > a, ul.icons li > span {
 				border: 0;
+				font-size: 35px;
 			}
 
 				ul.icons li > a .label, ul.icons li > span .label {
